# linked-list

./: .gitignore  CMakeLists.txt  README.md  data.txt
include/: list.hpp  loader.hpp
src/: CMakeLists.txt  main.cpp
